Added some results. and a for-loop to get results in main.cpp

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -184,15 +184,23 @@ Here $\rho=r/\alpha$. $\alpha$ is fixed to $\alpha=\hbar^2/(m\beta e^2)$. A rela
 \section{Result}
 
 
-
-
-
-
-
-
-
-
-
+\begin{tabular}{|c|c|c|c|c|}
+	\hline 
+	n & time & $\lambda_1$ & $\lambda_2$ & $\lambda_3$\\ 
+	\hline
+	10 & 0.0002 & 2.00 & 5.20 & 8.26 \\
+	\hline
+	20 & 0.002 & 2.46 & 6.11 & 9.77 \\
+	\hline
+	40 & 0.04 & 2.72 & 6.65 & 10.42 \\
+	\hline
+	80 & 0.52 & 2.86 & 6.78 & 10.72 \\
+	\hline
+	160 & 8.38 & 2.92 & 6.89 & 10.86 \\
+	\hline
+	320 & 149.63 & 2.96 & 6.94 & 10.93 \\
+	\hline
+\end{tabular}
 
 
 
@@ -229,7 +237,28 @@ It is apparent that Jacobi's rotation algorithm is an efficient method of findin
 
 
 
+%\begin{tabular}{|c|c|c|c|c|c|c|}
+%	\hline 
+%	n & General & Specific & LU & fastest & slowest & $\frac{slowest}{fastest}$\\ 
+%	\hline
+%	10 & 6.5e-05 & 5e-06 & 4e-05 & Specific & General & 13.0\\ 
+%	\hline 
+%	100 & 7.5e-05 & 8e-06 & 0.0023 & Specific & LU & 287.5\\ 
+%	\hline 
+%	1000 & 0.00014 & 4e-05 & 0.26 & Specific & LU & 6500\\ 
+%	\hline
+%	10000 & 0.0007 & 0.0005 & 142.5 & Specific & LU & 285000 \\ 
+%	\hline
+%\end{tabular}
 
+%\begin{figure}[H]
+%		\centering
+%		\includegraphics[width=0.7\linewidth]{ab.png}
+%		\caption{Atomene er gule kuler, de elementære vektorene er blå og a vektorene er grønne.}
+%		\label{fig:ab}
+%\end{figure}
+%\printbibliography
+%\inputminted{python}{plot_black.py}
 
 
 
